# personal-ai-os

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md  SECURITY.md  architecture.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml
data/demo/: goals.json  knowledge.json  notes.json  reflections.json  tasks.json
docs/: ARCHITECTURE.md  CONFIG.md  DESIGN_DECISIONS.md  FAQ.md  user_stories.md
examples/advanced/: README.md
examples/minimal/: README.md
examples/output/: plan.json  reflection.json
src/os/: __init__.py  cli.py
src/os/core/: __init__.py  config.py  logger.py  storage.py
src/os/llm/: __init__.py  mock.py
src/os/modules/: __init__.py  goals.py  knowledge.py  memory.py  reflection.py  tasks.py
tests/: test_core.py
